--- a/weather/Views/Base.lproj/Main.storyboard
+++ b/weather/Views/Base.lproj/Main.storyboard
@@ -36,10 +36,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="158" height="175"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TFQ-qv-62S">
-                                                    <rect key="frame" x="24" y="29" width="111" height="103"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ML3-Ti-BZs">
                                                     <rect key="frame" x="58" y="5" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -48,14 +44,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pDu-XP-bcC">
-                                                    <rect key="frame" x="24" y="135" width="42" height="21"/>
+                                                    <rect key="frame" x="24" y="110" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KN5-Qv-Bb4">
-                                                    <rect key="frame" x="24" y="154" width="42" height="21"/>
+                                                    <rect key="frame" x="24" y="134" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -68,7 +64,6 @@
                                             <outlet property="dateLabel" destination="ML3-Ti-BZs" id="rNF-G5-YYK"/>
                                             <outlet property="hiTemp" destination="pDu-XP-bcC" id="Vdd-J2-RyK"/>
                                             <outlet property="loTemp" destination="KN5-Qv-Bb4" id="PBb-u0-GLb"/>
-                                            <outlet property="weatherImage" destination="TFQ-qv-62S" id="COr-7Z-fXD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -79,7 +74,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KF-vA-up9">
-                                <rect key="frame" x="141" y="79" width="133" height="21"/>
+                                <rect key="frame" x="100" y="79" width="214" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="133" id="766-78-RoC"/>
                                 </constraints>
@@ -91,8 +86,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="gAq-U2-Bk9" firstAttribute="top" secondItem="U6x-Do-2ML" secondAttribute="bottom" constant="65" id="2GQ-Zm-4ZY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="7KF-vA-up9" secondAttribute="trailing" constant="140" id="Cvp-E5-QGA"/>
-                            <constraint firstItem="7KF-vA-up9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="141" id="DJl-8R-hIK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7KF-vA-up9" secondAttribute="trailing" constant="100" id="Cvp-E5-QGA"/>
+                            <constraint firstItem="7KF-vA-up9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="DJl-8R-hIK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="U6x-Do-2ML" secondAttribute="trailing" id="FLI-R5-qe2"/>
                             <constraint firstItem="U6x-Do-2ML" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GKE-aD-wt2"/>
                             <constraint firstItem="U6x-Do-2ML" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="GNn-d7-S2c"/>
